--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Penny Rowe <1795738+prowe12@users.noreply.github.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.1.3"
+plotly = "^5.11.0"
 
 [tool.poetry.dev-dependencies]
 
