--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Penny Rowe <1795738+prowe12@users.noreply.github.com>"]
 python = "^3.10"
 Django = "^4.1.3"
 plotly = "^5.11.0"
+django-extensions = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 
