--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 Django = "^4.1.3"
 plotly = "^5.11.0"
 django-extensions = "^3.2.1"
+numpy = "^1.23.5"
 
 [tool.poetry.dev-dependencies]
 
